--- a/LOD/life-or-death-game.html
+++ b/LOD/life-or-death-game.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Life-or-Death AI Game</h1>
+    <h1>Life-or-Death AI Game (Still in development)</h1>
     <p>Enter a life-or-death scenario and see if you survive!</p>
   </header>
 
