--- a/AF/AI-Art-Commissions.html
+++ b/AF/AI-Art-Commissions.html
@@ -6,6 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI-Art-Request</title>
 </head>
-<p>April Fools Liberal</p>
+<p>April Fools Bucko</p>
 <img src="icegif-162.gif">
 </html>
