--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <section id="contact">
   <h2>Contact</h2>
   <p>Email: <a href="mailto:ah23325@uga.edu">ah23325@uga.edu</a></p>
-  <p>GitHub: <a href="github.com/AKinThreads">AKinThreads</a></p>
+  <p>GitHub: <a href="https://www.github.com/AKinThreads">AKinThreads</a></p>
   <p>Linkedin: <a href="https://www.linkedin.com/in/abdulkarim-haddad-b375772a8/">Abdulkarim Haddad</a></p>
 </section>
 
